    o workstation_model -> workstation/model
  * New configuration variables:
    o network/bandwidth_factor: correction to bandwith
    o network/latency_factor: correction to latency
    o netwotk/weight_S: correction to the weight of competing streams
  * Add a long description to the models, that users can see with such
    argument on the command line: --cfg=cpu/model:help
 SMPI:
  * Implement MPI_Get_count, MPI_MAXLOC, MPI_MINLOC
 XBT:
  * config: add the ability to set a default value after registration
    Does not override any previously set value (e.g. from cmd line)
 
      
 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>


SimGrid (3.3.4) stable; urgency=low

 The "Desktop Grid needs love too" release (also called Xmas release).

 Models improvements:
 * Major speedup in the maxmin system solving by using lazy evaluation
   Instead of solving completely the maxmin system at each iteration, 
     only invalidate (and recompute) the modified parts. 
   This new feature is enabled in default models but you can try to
     turn it on with "--cfg:maxmin-selective-update=1" for other models.
 * Cas01 IMproved as default CPU model
   This CPU model is the same Cas01 model, but it uses the
     maxmin-selective-update flag and a heap structure to manage
     actions on SURF kernel. 
   It reduces the complexity to find the next action to finish and,
     consequently, it's faster than the old Cas01.
   This is the new default CPU model (Cas01).   
 * Rename the old Cas01 model to Cas01_fullupdate
   Keep the old cpu model Cas01 with the new name of Cas01_fullupdate.
   Use "--cfg=cpu_model:Cas01_fullupdate" to use the old default CPU model.
 * CpuTI (CPU Trace Integration)
   A new CPU model whose objective is simulate faster when using
     availability trace files. 
   Instead of using a full featured, over engineered maxmin system for
     CPU modeling, this model does the pre-integration of traces files