@@ -34,7 +34,12 @@ static void surf_config_cmd_line(int *argc, char **argv)
                !strncmp(argv[i], "--help", strlen("--help") + 1)) {
       printf("Description of the configuration accepted by this simulator:\n");
       xbt_cfg_help(_surf_cfg_set);
-      remove_it = 1;
+      printf("\nYou can also use --help-models to see the details of all models known by this simulator.\n");
+      exit(0);
+    } else if (!strncmp(argv[i], "--help-models", strlen("--help-models")+1)) {
+      model_help("workstation",surf_workstation_model_description);
+      model_help("CPU",surf_cpu_model_description);
+      model_help("network",surf_network_model_description);
       exit(0);
     }
     if (remove_it) {            /*remove this from argv */
@@ -64,8 +69,10 @@ static void _surf_cfg_cb__workstation_model(const char *name, int pos)
 
   val = xbt_cfg_get_string(_surf_cfg_set, name);
 
-  if (!strcmp(val,"help"))
+  if (!strcmp(val,"help")) {
     model_help("workstation",surf_workstation_model_description);
+    exit(0);
+  }
 
   /* Make sure that the model exists */
   find_model_description(surf_workstation_model_description, val);
@@ -81,8 +88,10 @@ static void _surf_cfg_cb__cpu_model(const char *name, int pos)
 
   val = xbt_cfg_get_string(_surf_cfg_set, name);
 
-  if (!strcmp(val,"help"))
+  if (!strcmp(val,"help")) {
     model_help("CPU",surf_cpu_model_description);
+    exit(0);
+  }
 
   /* New Module missing */
   find_model_description(surf_cpu_model_description, val);
@@ -98,8 +107,10 @@ static void _surf_cfg_cb__network_model(const char *name, int pos)
 
   val = xbt_cfg_get_string(_surf_cfg_set, name);
 
-  if (!strcmp(val,"help"))
+  if (!strcmp(val,"help")) {
     model_help("network",surf_network_model_description);
+    exit(0);
+  }
 
   /* New Module missing */
   find_model_description(surf_network_model_description, val);
